# fasted_llm_model_server

./: Cargo.toml  README.md  config.json
models/rustformers_redpajama-3b-ggml/: config.json
src/: main.rs
src/com/llm/server/core/: download_model.rs  handler.rs  mod.rs  model.rs  rest_server.rs
